--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500; 700&display-swa" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="styles.css">
 
 
 
@@ -54,10 +55,45 @@
         <input class="banner__pesquisa" type="search" placeholder="Qual será sua próxima leitura?">
     </section>
     <section class="carrossel">
-        <h2 class="carrossel__titulo">Novos lançamentos</h2>
+        <h2 class="carrossel__titulo">últimos lançamentos</h2>
+        <!-- Slider main container -->
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                        alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                        alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                        alt="Livro sobre Acessibilidade da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Liderança.svg"
+                        alt="Livro sobre Liderança em design da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Javascript.svg"
+                        alt="Livro sobre JavaScript assertivo da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                        alt="Livro sobre Front-end da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre Portugol da AluraBooks"></div>
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+        </div>
     </section>
-
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js">
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            }
+        });
+    </script>
 </body>
 
 </html>
