--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <!--1ª Coluna-->
                 <div class="descricao">
                     <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo__Livro">Angular 11 e Firebase</h2>
-                    <p>Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
+                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                 </div>
                 <img class="descricao__imagem" src="assets/AngularLogo.svg" alt="Livro Angular">
             </div>
@@ -111,7 +111,7 @@
                     <li class="botoes__item"><img src="assets/Favoritos.svg" alt="favoritos"></li>
                     <li class="botoes__item"><img src="assets/Sacola.png" alt="items do carrinho"></li>
                 </ul>
-                <a href="#" class="botoes__ancora">Saiba Mais</a>
+                <a href="#" class="botoes__ancora">Saiba mais</a>
             </div>
 
 
