Terminando o layout mobile

--- a/index.html
+++ b/index.html
@@ -88,9 +88,6 @@
                 <div class="swiper-slide"><img src="assets/Tuning.svg" alt="Livro sobre Tuning da AluraBooks"></div>
                 <div class="swiper-slide"><img src="assets/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
             </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
 
         </div>
         <div class="card">
@@ -117,6 +114,95 @@
 
         </div>
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Mais Vendidos</h2>
+        <div class="swiper">
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                        alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                        alt="Livro sobre Acessibilidade da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Liderança.svg"
+                        alt="Livro sobre Liderança em design da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Javascript.svg"
+                        alt="Livro sobre JavaScript assertivo da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                        alt="Livro sobre Front-end da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Tuning.svg" alt="Livro sobre Tuning da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
+            </div>
+            <div class="card">
+                <!--1ª Linha-->
+                <div class="card__descricao">
+                    <!--1ª Coluna-->
+                    <div class="descricao">
+                        <img class="descricao__estrelas" src="assets/Estrelinhas.svg" alt="Estrelinhas">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.</p>
+                    </div>
+                    <img class="descricao__imagem" src="assets/Perfil-escritora 1.svg" alt="Foto da Escritora">
+                </div>
+                <!--2ª Linha-->
+                <div class="card__botoes">
+                    <!--1ª Coluna-->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="assets/Favoritos.svg" alt="favoritos"></li>
+                        <li class="botoes__item"><img src="assets/Sacola.png" alt="items do carrinho"></li>
+                    </ul>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
+    </section>
+    <h1 class="linha__branca"></h1>
+    <section class="topicos">
+        <h2 class="topicos__titulo">Tópicos Visitados Recentemente</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Android</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Marketing Digital</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Agile</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Startups</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">HTML & CSS</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Python</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">OO</a>
+            </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link">Java</a>
+            </li>
+        </ul>
+    </section>
+    <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input class="contato__email" type="email" placeholder="Cadastre seu e-mail">
+
+    </section>
+    <hr />
+
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Alura</h2>
+    </footer>
+
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
