--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500; 700&display-swa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles.css">
-
-
-
 </head>
 
 <body>
@@ -22,8 +20,9 @@
             <input class="container__botao" type="checkbox" id="menu">
             <label for="menu">
                 <span class="cabecalho__hamburguer container__imagem"></span>
-                <img class="container__imagem" src="assets/Logo.svg" alt="Logo da AluraBooks">
             </label>
+            <img class="container__imagem" src="assets/Logo.svg" alt="Logo da AluraBooks">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
             <ul class="lista__menu">
                 <li class="lista__menu__titulo">Categorias</li>
                 <li class="lista__menu__item">
