tentativa para deixar responsivo

--- a/index.html
+++ b/index.html
@@ -42,8 +42,33 @@
                 </li>
             </ul>
         </div>
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
+            <label for="opcoes-menu">
+                <li class="opcoes__item">Categorias</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">PROGRAMAÇÃO</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">FRONT-END</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">INFRAESTRUTURA</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">BUSINESS</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a class="lista-menu__link" href="#">DESIGN & UX</a>
+                </li>
+            </ul>
+            <li class="opcoes__item"><a href="#">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#">Minha estante</a></li>
+        </ul>
         <div class="container">
-            <a href="#"><img class="container__imagem" src="assets/Favoritos.svg" alt="Meus Favoritos"></a>
+            <a href="#"><img class="container__imagem favoritos" src="assets/Favoritos.svg" alt="Meus Favoritos"></a>
             <a href="#"><img class="container__imagem" src="assets/Sacola.png" alt="Carrinho de compras"></a>
             <a href="#"><img class="container__imagem" src="assets/Usuario.png" alt="Meu perfil"></a>
         </div>
