responsivo para 1024px

--- a/index.html
+++ b/index.html
@@ -87,31 +87,40 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                <div class="swiper-slide"><img src="assets/Livros/ApacheKafka.svg"
                         alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Acessibilidade.svg"
                         alt="Livro sobre Acessibilidade da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Liderança.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Liderança.svg"
                         alt="Livro sobre Liderança em design da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Javascript.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Javascript.svg"
                         alt="Livro sobre JavaScript assertivo da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Guia Front-end.svg"
                         alt="Livro sobre Front-end da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Portugol.svg" alt="Livro sobre Portugol da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Angular.svg" alt="Livro sobre Angular da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Arquitetura.svg"
-                        alt="Livro sobre Arquiterura de Software da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Construct2.svg" alt="Livro sobre Construct da AluraBooks">
+                <div class="swiper-slide"><img src="assets/Livros/Portugol.svg"
+                        alt="Livro sobre Portugol da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Livros/Angular.svg" alt="Livro sobre Angular da AluraBooks">
                 </div>
-                <div class="swiper-slide"><img src="assets/Gestão2.svg" alt="Livro sobre Gestão da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/MEAN.svg" alt="Livro sobre Mean da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/MetricasAgeis.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Arquitetura.svg"
+                        alt="Livro sobre Arquiterura de Software da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Livros/Construct2.svg"
+                        alt="Livro sobre Construct da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Livros/Gestão2.svg" alt="Livro sobre Gestão da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Livros/MEAN.svg" alt="Livro sobre Mean da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Livros/MetricasAgeis.svg"
                         alt="Livro sobre Métricas Ágeis da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/ReactNative.svg"
+                <div class="swiper-slide"><img src="assets/Livros/ReactNative.svg"
                         alt="Livro sobre React Native da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Tuning.svg" alt="Livro sobre Tuning da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Livros/Tuning.svg" alt="Livro sobre Tuning da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Livros/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
             </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
 
         </div>
         <div class="card">
@@ -123,7 +132,7 @@
                     <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
                     <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                 </div>
-                <img class="descricao__imagem" src="assets/AngularLogo.svg" alt="Livro Angular">
+                <img class="descricao__imagem" src="assets/Livros/AngularLogo.svg" alt="Livro Angular">
             </div>
             <!--2ª Linha-->
             <div class="card__botoes">
@@ -146,23 +155,24 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/ApacheKafka.svg"
+                <div class="swiper-slide"><img src="assets/Livros/ApacheKafka.svg"
                         alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Acessibilidade.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Acessibilidade.svg"
                         alt="Livro sobre Acessibilidade da AluraBooks">
                 </div>
-                <div class="swiper-slide"><img src="assets/Liderança.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Liderança.svg"
                         alt="Livro sobre Liderança em design da AluraBooks">
                 </div>
-                <div class="swiper-slide"><img src="assets/Javascript.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Javascript.svg"
                         alt="Livro sobre JavaScript assertivo da AluraBooks">
                 </div>
-                <div class="swiper-slide"><img src="assets/Guia Front-end.svg"
+                <div class="swiper-slide"><img src="assets/Livros/Guia Front-end.svg"
                         alt="Livro sobre Front-end da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Tuning.svg" alt="Livro sobre Tuning da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
+                <div class="swiper-slide"><img src="assets/Livros/Tuning.svg" alt="Livro sobre Tuning da AluraBooks">
+                </div>
+                <div class="swiper-slide"><img src="assets/Livros/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
             </div>
-            <div class="card">
+            <div class="card autor">
                 <!--1ª Linha-->
                 <div class="card__descricao">
                     <!--1ª Coluna-->
@@ -216,8 +226,10 @@
         </ul>
     </section>
     <section class="contato">
-        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <div class="contato__descrição">
+            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
         <input class="contato__email" type="email" placeholder="Cadastre seu e-mail">
 
     </section>
@@ -225,6 +237,83 @@
 
     <footer class="rodape">
         <h2 class="rodape__titulo">Grupo Alura</h2>
+
+        <ul class="rodape__lista">
+            <li class="rodape__lista__titulo">Educação</li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna1/1_Caelum.svg" alt="logo Caelum">
+                <a href="#">Caelum</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna1/2_CasaDoCodigo.svg" alt="logo Casa do Código">
+                <a href="#">Casa do Código</a>
+            </li>
+        </ul>
+
+        <ul class="rodape__lista">
+            <li class="rodape__lista__titulo">EDUCAÇÃO ONLINE</li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna2/Alura.svg" alt="logo Alura">
+                <a href="#">Alura</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna2/AluraEmpresas.svg" alt="logo alura para empresas">
+                <a href="#">Alura para Empresas</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna2/AluraLATAM.svg" alt="logo alura latam">
+                <a href="#">Alura Latam</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna2/AluraStart.svg" alt="logo alura start">
+                <a href="#">Alura Start</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna2/MusicDot.svg" alt="logo music dot">
+                <a href="#">MusicDot</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna2/AluraLingua.svg" alt="logo alura Lingua">
+                <a href="#">Alura Língua</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna2/PM3.svg" alt="logo PM3">
+                <a href="#">PM3</a>
+            </li>
+        </ul>
+
+        <ul class="rodape__lista">
+            <li class="rodape__lista__titulo">Comunidade</li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna3/HipstersTech.svg" alt="logo HipsterTech">
+                <a href="#">Hipsters ponto Tech</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna3/ScubaDev.svg" alt="logo Scuba Dev">
+                <a href="#">Scuba Dev</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna3/LayersTech.svg" alt="logo Layers">
+                <a href="#">Layers ponto Tech</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna3/LikeABoss.svg" alt="logo Like a boss">
+                <a href="#">Like a Boss</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna3/CarreiraSemFronteira.svg" alt="logo Carreira sem fronteira">
+                <a href="#">Carreira sem Fronteira</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna3/HipstersJobs.svg" alt="logo Hipsterjobs">
+                <a href="#">Hipsters ponto Jobs</a>
+            </li>
+            <li class="rodape__lista__item">
+                <img src="assets/rodape/coluna3/GUJ.svg" alt="logo GUJ">
+                <a href="#">GUJ</a>
+            </li>
+        </ul>
+
     </footer>
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
