Header para 1728px

--- a/index.html
+++ b/index.html
@@ -68,9 +68,17 @@
             <li class="opcoes__item"><a href="#">Minha estante</a></li>
         </ul>
         <div class="container">
-            <a href="#"><img class="container__imagem favoritos" src="assets/Favoritos.svg" alt="Meus Favoritos"></a>
-            <a href="#"><img class="container__imagem" src="assets/Sacola.png" alt="Carrinho de compras"></a>
-            <a href="#"><img class="container__imagem" src="assets/Usuario.png" alt="Meu perfil"></a>
+            <a class="container__link" href="#">
+                <img class="container__imagem favoritos" src="assets/Favoritos.svg" alt="Meus Favoritos">
+            </a>
+            <a class="container__link" href="#">
+                <img class="container__imagem" src="assets/Sacola.png" alt="Carrinho de compras">
+                <p class="container__imagem__titulo">Minha sacola</p>
+            </a>
+            <a class="container__link" href="#">
+                <img class="container__imagem" src="assets/Usuario.png" alt="Meu perfil">
+                <p class="container__imagem__titulo">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
