Site Responsivo 1728px

--- a/index.html
+++ b/index.html
@@ -88,97 +88,106 @@
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">últimos lançamentos</h2>
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/Livros/ApacheKafka.svg"
-                        alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Acessibilidade.svg"
-                        alt="Livro sobre Acessibilidade da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Liderança.svg"
-                        alt="Livro sobre Liderança em design da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Javascript.svg"
-                        alt="Livro sobre JavaScript assertivo da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Guia Front-end.svg"
-                        alt="Livro sobre Front-end da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Portugol.svg"
-                        alt="Livro sobre Portugol da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Angular.svg" alt="Livro sobre Angular da AluraBooks">
+        <div class="carrossel__container">
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assets/Livros/ApacheKafka.svg"
+                            alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Acessibilidade.svg"
+                            alt="Livro sobre Acessibilidade da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Liderança.svg"
+                            alt="Livro sobre Liderança em design da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Javascript.svg"
+                            alt="Livro sobre JavaScript assertivo da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Guia Front-end.svg"
+                            alt="Livro sobre Front-end da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Portugol.svg"
+                            alt="Livro sobre Portugol da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Angular.svg"
+                            alt="Livro sobre Angular da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/Arquitetura.svg"
+                            alt="Livro sobre Arquiterura de Software da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Construct2.svg"
+                            alt="Livro sobre Construct da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/Gestão2.svg"
+                            alt="Livro sobre Gestão da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/MEAN.svg" alt="Livro sobre Mean da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/MetricasAgeis.svg"
+                            alt="Livro sobre Métricas Ágeis da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/ReactNative.svg"
+                            alt="Livro sobre React Native da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Tuning.svg"
+                            alt="Livro sobre Tuning da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
                 </div>
-                <div class="swiper-slide"><img src="assets/Livros/Arquitetura.svg"
-                        alt="Livro sobre Arquiterura de Software da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Construct2.svg"
-                        alt="Livro sobre Construct da AluraBooks">
-                </div>
-                <div class="swiper-slide"><img src="assets/Livros/Gestão2.svg" alt="Livro sobre Gestão da AluraBooks">
-                </div>
-                <div class="swiper-slide"><img src="assets/Livros/MEAN.svg" alt="Livro sobre Mean da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/MetricasAgeis.svg"
-                        alt="Livro sobre Métricas Ágeis da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/ReactNative.svg"
-                        alt="Livro sobre React Native da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Tuning.svg" alt="Livro sobre Tuning da AluraBooks">
-                </div>
-                <div class="swiper-slide"><img src="assets/Livros/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+
+
             </div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-
-        </div>
-        <div class="card">
-            <!--1ª Linha-->
-            <div class="card__descricao">
-                <!--1ª Coluna-->
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            <div class="card">
+                <!--1ª Linha-->
+                <div class="card__descricao">
+                    <!--1ª Coluna-->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo__livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <img class="descricao__imagem" src="assets/Livros/AngularLogo.svg" alt="Livro Angular">
                 </div>
-                <img class="descricao__imagem" src="assets/Livros/AngularLogo.svg" alt="Livro Angular">
-            </div>
-            <!--2ª Linha-->
-            <div class="card__botoes">
-                <!--1ª Coluna-->
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="assets/Favoritos.svg" alt="favoritos"></li>
-                    <li class="botoes__item"><img src="assets/Sacola.png" alt="items do carrinho"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
-            </div>
+                <!--2ª Linha-->
+                <div class="card__botoes">
+                    <!--1ª Coluna-->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="assets/Favoritos.svg" alt="favoritos"></li>
+                        <li class="botoes__item"><img src="assets/Sacola.png" alt="items do carrinho"></li>
+                    </ul>
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
 
 
+            </div>
         </div>
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais Vendidos</h2>
-        <div class="swiper">
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide"><img src="assets/Livros/ApacheKafka.svg"
-                        alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Acessibilidade.svg"
-                        alt="Livro sobre Acessibilidade da AluraBooks">
+        <div class="carrossel__container carrossel__autor">
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide"><img src="assets/Livros/ApacheKafka.svg"
+                            alt="Livro sobre Apache Kafka e Spring Boot da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Acessibilidade.svg"
+                            alt="Livro sobre Acessibilidade da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/Liderança.svg"
+                            alt="Livro sobre Liderança em design da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/Javascript.svg"
+                            alt="Livro sobre JavaScript assertivo da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/Guia Front-end.svg"
+                            alt="Livro sobre Front-end da AluraBooks"></div>
+                    <div class="swiper-slide"><img src="assets/Livros/Tuning.svg"
+                            alt="Livro sobre Tuning da AluraBooks">
+                    </div>
+                    <div class="swiper-slide"><img src="assets/Livros/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
                 </div>
-                <div class="swiper-slide"><img src="assets/Livros/Liderança.svg"
-                        alt="Livro sobre Liderança em design da AluraBooks">
-                </div>
-                <div class="swiper-slide"><img src="assets/Livros/Javascript.svg"
-                        alt="Livro sobre JavaScript assertivo da AluraBooks">
-                </div>
-                <div class="swiper-slide"><img src="assets/Livros/Guia Front-end.svg"
-                        alt="Livro sobre Front-end da AluraBooks"></div>
-                <div class="swiper-slide"><img src="assets/Livros/Tuning.svg" alt="Livro sobre Tuning da AluraBooks">
-                </div>
-                <div class="swiper-slide"><img src="assets/Livros/UX.svg" alt="Livro sobre UX da AluraBooks"></div>
             </div>
             <div class="card autor">
                 <!--1ª Linha-->
@@ -186,7 +195,7 @@
                     <!--1ª Coluna-->
                     <div class="descricao">
                         <img class="descricao__estrelas" src="assets/Estrelinhas.svg" alt="Estrelinhas">
-                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h3 class="descricao__titulo titulo__autor">Autora do Mês</h3>
                         <h2 class="descricao__titulo__livro">Juliana Agarikov</h2>
                         <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em
                             Front-End.</p>
@@ -202,6 +211,8 @@
                     </ul>
                     <a href="#" class="botoes__ancora">Saiba mais</a>
                 </div>
+            </div>
+        </div>
     </section>
     <h1 class="linha__branca"></h1>
     <section class="topicos">
