--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="cabecalho">
         <div class="container">
             <input class="container__botao" type="checkbox" id="menu">
-            <label for="menu">
+            <label class="container__rotulo" for="menu">
                 <span class="cabecalho__hamburguer container__imagem"></span>
             </label>
             <img class="container__imagem" src="assets/Logo.svg" alt="Logo da AluraBooks">
@@ -44,7 +44,7 @@
         </div>
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes-botao">
-            <label for="opcoes-menu">
+            <label class="opcoes__rotulo" for="opcoes-menu">
                 <li class="opcoes__item">Categorias</li>
             </label>
             <ul class="lista-menu">
